Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,8 +58,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    count =\n",
+    "    count = 0\n",
     "    for i in travel_destinations:\n",
+    "        count += 1\n",
     "        \n",
     "    pass"
    ]
