Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,8 +61,8 @@
     "    count = 0\n",
     "    for i in travel_destinations:\n",
     "        count += 1\n",
-    "        \n",
-    "    pass"
+    "    return count\n",
+    "    pss"
    ]
   },
   {
