--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    \n",
+    "    return travel_d\n",
     "    pass"
    ]
   },
