--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countries = "
+    "    capitalized_countries = []\n",
+    "    for i in travel_destinations:\n",
+    "        capitalized_countries.append(travel_destinations[i])"
    ]
   },
   {
