Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
     "    for i in travel_destinations:\n",
-    "        capitalized_countries.append(travel_destinations[i].uppercase())\n",
+    "        capitalized_countries.append(travel_destinations[i].capitalize())\n",
     "    return capitalized_countries"
    ]
   },
