--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized = []\n",
-    "    for i in travel_destinations:\n",
+    "    for destination in travel_destinations:\n",
     "        capitalized.append(travel_destinations[i].capitalize())\n",
     "    return capitalized_countries"
    ]
