--- a/index.ipynb
+++ b/index.ipynb
@@ -220,15 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized = []\n",
-    "    for destination in travel_destinations:\n",
-    "        capitalized.append(travel_destinations[i].capitalize())\n",
+    "    capitalized_countries = []\n",
+    "    for i in travel_destinations:\n",
+    "        capitalized_countries.append(destination.title())\n",
     "    return capitalized_countries"
    ]
   },
